--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preload" href="/public/fonts/Pretendard-ExtraLight.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/public/fonts/Pretendard-Bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/public/fonts/Poppins-Light.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/public/fonts/Poppins-ExtraBold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="포트폴리오 사이트입니다." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>yejin's portfolio</title>
