--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preload" href="/public/fonts/Pretendard-Bold.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/public/fonts/Poppins-ExtraBold.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/image/noise.gif" as="image" />
+    <link rel="preload" href="/image/profile_img.png" as="image" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="포트폴리오 사이트입니다." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
