--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="preload" href="/public/fonts/Pretendard-Light.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/public/fonts/Pretendard-Bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/public/fonts/Pretendard-Light.subset.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="/public/fonts/Pretendard-Bold.subset.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="/public/fonts/Poppins-ExtraBold.woff2" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="/image/noise.gif" as="image" />
+    <!-- <link rel="preload" href="/image/noise.gif" as="image" /> -->
     <link rel="preload" href="/image/profile_img.webp" as="image" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="description" content="포트폴리오 사이트입니다." />
